--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "basic_deno_ts_module_loader"
 version = "0.1.0"
 edition = "2021"
 authors = ["Peter Jiang"]
-
+description = "A basic Deno TypeScript module loader"
+license = "MIT"
+repository = "https://github.com/CheatCod/basic_deno_ts_module_loader"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
