--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ repository = "https://github.com/CheatCod/basic_deno_ts_module_loader"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.18"
-anyhow = "1.0.72"
-deno_ast = { version = "0.27.3", features = ["transpiling"] }
-deno_core = "0.195.0"
-deno_runtime = "0.120.0"
-tokio = { version = "1.29.1", features = ["fs"] }
+reqwest = "=0.11.20"
+anyhow = "1.0.79"
+deno_ast = { version = "=0.32.1", features = ["transpiling"] }
+deno_core = "=0.256.0"
+deno_runtime = "0.144.0"
+tokio = { version = "1.36.0", features = ["fs"] }
